--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,12 +6,9 @@
     <string name="msg_token">Instance ID token: %s</string>
     <string name="notification_channel_id" translatable="false">001_channel</string>
 
-
     <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
-
 
     <string name="notification_channel_name" translatable="true">Messages</string>
 
-
-    <string name="fcm_message">FCM Message</string>
+    <string name="fcm_message">Message</string>
 </resources>
