--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Activity Tracker</string>
     <string name="title_home">Home</string>
     <string name="title_map">Map</string>
     <string name="title_messages">Messages</string>
